IC-Test/objects/EmailResultSummary__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Email Result Summaries</relationshipLabel>
        <relationshipName>EmailResultSummaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateFirstSent__c</fullName>
        <label>Date First Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EmailSubject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalBounced__c</fullName>
        <label>Total Bounced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOpened__c</fullName>
        <label>Total Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalSent__c</fullName>
        <label>Total Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalUnsubscribed__c</fullName>
        <label>Total Unsubscribed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Email Result Summary</label>
    <listViews>
        <fullName>BlankSubject</fullName>
        <columns>NAME</columns>
        <columns>TotalSent__c</columns>
        <columns>TotalOpened__c</columns>
        <columns>TotalBounced__c</columns>
        <columns>TotalUnsubscribed__c</columns>
        <columns>EmailSubject__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>DateFirstSent__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EmailSubject__c</field>
            <operation>equals</operation>
        </filters>
        <label>Blank Subject</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EPQ</fullName>
        <columns>NAME</columns>
        <columns>TotalSent__c</columns>
        <columns>TotalOpened__c</columns>
        <columns>TotalBounced__c</columns>
        <columns>TotalUnsubscribed__c</columns>
        <columns>EmailSubject__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>DateFirstSent__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Email Product Quotes</value>
        </filters>
        <label>Email Product Quotes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Promo</fullName>
        <columns>NAME</columns>
        <columns>TotalSent__c</columns>
        <columns>TotalOpened__c</columns>
        <columns>TotalBounced__c</columns>
        <columns>TotalUnsubscribed__c</columns>
        <columns>EmailSubject__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>DateFirstSent__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Promo</value>
        </filters>
        <label>Promo Emails</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>x_single_quotesSUMM</fullName>
        <columns>NAME</columns>
        <columns>DateFirstSent__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>&apos;</value>
        </filters>
        <label>Email Name w Single quote - MUST FIX</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Email Result Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Result Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>